[package]
name = "balsa"
version = "0.1.0"
authors = ["RiteLabs"]
license = "Apache-2.0 OR MIT"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/ritelabs/balsa"
readme = "README.md"
homepage = "https://github.com/ritelabs/balsa"
documentation = "https://docs.rs/balsa"
description = "The rust language implementation of Raft algorithm."
categories = ["algorithms", "database-implementations"]
edition = "2018"

[workspace]
members = ["proto", "datadriven"]

[features]
# Enable failpoints
failpoint = ["failpoints/failpoints"]

# Make sure to synchronize updates with Harness.
[dependencies]
balsa-proto = { path = "proto", version = "0.1.0"}
failpoints = { version = "0.1", optional = true }
getset = "0.1.1"
protobuf = "2.23"
rand = "0.8"
ritehash = "0.1.0"
slog = "2.2"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
regex = "1"
anyhow = "1.0"
balsa-datadriven = { path = "datadriven", version = "0.1.0" }
itertools = "0.10.0"
