[package]
name = "balsa-datadriven"
version = "0.1.0"
authors = ["RiteLabs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1"
lazy_static = "1.4"
similar-asserts = "1.1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
