[package]
name = "balsa-proto"
version = "0.1.0"
authors = ["RiteLabs"]
edition = "2018"
license = "Apache-2.0 OR MIT"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/ritelabs/balsa/proto"
homepage = "https://github.com/ritelabs/balsa/proto"
documentation = "https://docs.rs/balsa-proto"
description = "Protocol definitions for the rust language implementation of the Raft algorithm."
categories = ["algorithms", "database-implementations"]
build = "build.rs"

[build-dependencies]
protobuf-build = { version = "0.12", default-features = false , features = ["prost-codec"] }

[dependencies]
lazy_static = "1.4"
prost = "0.7"
protobuf = "2"

